# lolmetadumper2

./: Cargo.toml  LICENSE  README.md
.cargo/: config
src/: lib.rs  meta.rs  meta_dump.rs  module_info.rs  native.rs
