[package]
name = "lolmetadumper2"
version = "0.1.0"
authors = ["moonshadow565 <moonshadow565@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "BugSplat"


[dependencies]
num-traits = "0.2.14"
winapi = {  version = "0.3.9", features = [ "winbase", "consoleapi", "libloaderapi", "memoryapi", "processthreadsapi" ] }
pelite = "0.9.0"
regex = "1.5.3"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
