[package]
name = "lolmetadumper2"
version = "0.1.0"
authors = ["moonshadow565 <moonshadow565@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "TextShaping"

[dependencies]
winapi = { version = "0.3.9", features = ["winbase", "consoleapi", "processthreadsapi"] }
pelite = "0.9.0"
regex = "1.5.5"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
tlhelp32 = "1.0.3"
